--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ toml = "^0.10.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+mypy = "^0.782"
 
 [build-system]
 requires = ["poetry>=0.12"]
