--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ toml = "^0.10.1"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 mypy = "^0.782"
+black = "^19.10b0"
 
 [build-system]
 requires = ["poetry>=0.12"]
