--- a/.github/workflows/build_pull_request.yml
+++ b/.github/workflows/build_pull_request.yml
@@ -27,6 +27,6 @@ jobs:
         run: poetry install
         if: steps.cache.outputs.cache-hit != 'true'
       - name: Run mypy
-        uses: jpetrucciani/mypy-check@0.761
+        uses: poetry run mypy .
       - name: Run black
         run: poetry run black . --check
