--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pydantic = "^1.5.1"
 jinja2 = "^2.11.2"
 libsass = "^0.20.0"
 toml = "^0.10.1"
+click = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
