--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = ["Dan Turkel <daturkel@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.6"
 python-frontmatter = "^0.5.0"
-marko = {extras = ["codehilite", "footnote"], version = "^0.8.2"}
+marko = {extras = ["codehilite"], version = "^0.8.2"}
 pydantic = "^1.5.1"
 jinja2 = "^2.11.2"
 libsass = "^0.20.0"
@@ -18,6 +18,9 @@ click = "^7.1.2"
 pytest = "^5.2"
 mypy = "^0.782"
 black = "^19.10b0"
+
+[tool.poetry.scripts]
+mudi = "mudi.cli:cli"
 
 [build-system]
 requires = ["poetry>=0.12"]
