--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,14 @@ authors = ["Dan Turkel <daturkel@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.6"
 python-frontmatter = "^0.5.0"
-marko = {extras = ["codehilite"], version = "^0.8.2"}
 pydantic = "^1.5.1"
 jinja2 = "^2.11.2"
 libsass = "^0.20.0"
 toml = "^0.10.1"
 click = "^7.1.2"
+markdown = "^3.2.2"
+pygments = "^2.6.1"
+markdown-checklist = "^0.4.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
