--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ click = "^7.1.2"
 markdown = "^3.2.2"
 pygments = "^2.6.1"
 markdown-checklist = "^0.4.3"
+mdx_truly_sane_lists = "^1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
