--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,6 +26,7 @@ jobs:
           version: 1.0.9
           create_virtualenvs: true
       - name: Cache
+        id: cache
         uses: actions/cache@v2.0.0
         with:
           path: ~/.virtualenvs
