--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,11 +34,11 @@ jobs:
         uses: actions/cache@v2.0.0
         with:
           path: ~/.virtualenvs
-          key: poetry-venv-${{ hashFiles('poetry.lock') }}
+          key: poetry-virtualenv-${{ hashFiles('poetry.lock') }}
 
       - name: Install Dependencies via Poetry
         run: poetry install
-        #if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.cache.outputs.cache-hit != 'true'
       - name: Run mypy
         run: poetry run mypy .
       - name: Run black
