--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,16 +29,15 @@ jobs:
           poetry config virtualenvs.create true
           poetry config virtualenvs.in-project false
           poetry config virtualenvs.path ~/.virtualenvs
-      - name: Cache
-        id: cache
-        uses: actions/cache@v2.0.0
-        with:
-          path: ~/.virtualenvs
-          key: poetry-virtualenv-${{ hashFiles('poetry.lock') }}
-
+      # - name: Cache
+      #   id: cache
+      #   uses: actions/cache@v2.0.0
+      #   with:
+      #     path: ~/.virtualenvs
+      #     key: poetry-virtualenv-${{ hashFiles('poetry.lock') }}
       - name: Install Dependencies via Poetry
         run: poetry install
-        if: steps.cache.outputs.cache-hit != 'true'
+        # if: steps.cache.outputs.cache-hit != 'true'
       - name: Run mypy
         run: poetry run mypy .
       - name: Run black
